# langfold

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  agent.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
config/: agent.yaml
configs/: litellm_config.sample.yaml
docs/agents/react/: README.md
docs/architecture/: README.md
docs/getting-started/: README.md
docs/tools/: README.md
src/: config.py  main.py
src/controller/: chat.py
src/core/agents/: agent_factory.py  config.py  custom_react_agent.py  model_provider.py  standard_react_agent.py
src/core/graphs/: graph.py  graph_builder.py
src/core/nodes/: should_continue.py  tool_node.py
src/models/: __init__.py  state.py  user_input.py
src/nodes/: __init__.py  call_model.py  should_continue.py  tool_node.py
src/services/: agent.py  graph_builder.py  llm.py
src/services/agents/: __init__.py  agent_factory.py  custom_react_agent.py  standard_react_agent.py
src/tools/: __init__.py  tool_registry.py  username.py
src/utils/: chat.py  graph.py  logger.py  tool_registry.py
templates/custom-react-agent/: README.md  agent.yaml
templates/custom-react-agent/src/: main.py
templates/customer-support-agent/agents/: car_rental.yaml  excursions.yaml  flights.yaml  hotels.yaml  primary.yaml
templates/customer-support-agent/src/: config.py  main.py
templates/mcp-prebuilt-react-agent/: README.md  agent.yaml
templates/mcp-prebuilt-react-agent/src/: config.py  main.py
templates/prebuilt-react-agent/: README.md  agent.yaml
(+30 files in other folders)
