[project]
name = "langfold"
version = "0.1.0"
description = "production grade scaffolding framework for building LLM powered agents with Langraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.8",
    "gunicorn>=23.0.0",
    "jupyter>=1.1.1",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.74",
    "pre-commit>=4.1.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]
